# imperialism-decomp

./: .clang-format  .env.example  .gitignore  AGENTS.md  CMakeLists.txt  INSTRUCTIONS.md  README.md  TODO.md  agent_1.md  agent_1_old.md  agent_2.md  bitmap-ids.md  city-university-research-plan.md  control-tags-research.md  current_plan.md  cursor-code-usage-sites.md  cursor-resource-mapping.md  cursor-semantics-exe.md  entry_decompilation_plan.md  ghidra.toml  gob-stringtable-workflow.md  imperialism-decomp.md  justfile  map-orders-research-plan.md  msvc500-fid-workflow.md  neo4j-migration-plan.md  pyproject.toml  reccmp-project.yml  strenu-index-sample.txt  strenu-strings.tsv  tabsenu-gob-findings.md  tech-experiment-university-unlocks.md  technology-unlocks.md  tmp_buildturnevent_4357b0.c  tmp_fun_0046fd10.c  tmp_init_turn_event_dialog_factory.c  trade_bitmap_truth_table.md  tview_tcontrol_vtable_contract.md
bsim_db/: imperialism.trace.db
bsim_sigs/: sigs_c1af513b466fc19d897f13f404005ad0
config/: canary_targets_tgreatpower.csv  function_name_overrides.csv  function_ownership.csv  global_annotation_overrides.csv  reccmp-project.yml.example  string_annotation_overrides.csv  symbols.csv  symbols.ghidra.txt  tooling_surface.csv  vtable_annotation_overrides.csv  vtable_gate_baseline.csv  vtable_slots.csv
docs/: architecture.md  control_plane.md  macos-debug-symbols.md  reccmp_fork.md  toolchain.md  tooling_commands.md  tradecontrol_redecomp_contract.md  vtable_strategy.md  worklog.md
exports/: Imperialism-20260217_003824.gzf  Imperialism-20260217_003824.gzf.sha256  aggressive_discovery_20260217.json  aggressive_discovery_20260217_post_hints.json  aggressive_discovery_20260217_post_wave2.json  cluster_functions_20260217.csv  cluster_vcall_upgrade_candidates_20260217.csv  cluster_vcall_upgrade_candidates_20260217.json  cluster_vcall_upgrade_candidates_20260217_post_hints.csv  cluster_vcall_upgrade_candidates_20260217_post_hints.json  cpp_string_function_map_20260220.json  cpp_string_function_map_20260220.md  cpp_string_indirect_refs_20260220.json  cpp_string_indirect_refs_20260220.md  cpp_string_research_20260220.json  cpp_string_research_20260220.md  residual_cluster_vcall_evidence_20260217.csv  residual_cluster_vcall_evidence_20260217.json  residual_cluster_vcall_evidence_20260217_refresh.csv  residual_cluster_vcall_evidence_20260217_refresh.json  residual_vcall_family_trace_20260217.csv  residual_vcall_family_trace_20260217.json  vtable_families_20260217.csv  vtable_families_20260217.json  vtable_families_20260217_post_hints.csv  vtable_families_20260217_post_hints.json  vtable_families_20260217_post_wave2.csv  vtable_families_20260217_post_wave2.json  vtable_family_named_map_20260217.csv
include/: decomp_types.h
new_scripts/: add_shared_vtbl_alias_labels.py  aggressive_class_string_mining.py  aggressive_discovery_pyghidra.py  aggressive_virtual_call_clustering.py  aggressive_vtable_candidate_mining.py  angr_probe_tactical_mode_dispatch.py  angr_scan_codeptr_tables.py  annotate_arrow_command_constants.py  annotate_control_tag_constants.py  annotate_diplomacy_hotspot_plate_comments.py  annotate_trade_command_tag_flow.py  annotate_trade_slot_semantics.py  apply_class_helper_signatures.py  apply_class_method_stack_params_from_hidden_csv.py  apply_class_quads_from_csv.py  apply_class_structs_from_candidates.py  apply_class_this_param_types.py  apply_classname_pointer_getter_signatures.py  apply_cluster_hint_renames.py  apply_control_tag_enum_param_types.py  apply_destructor_signatures.py  apply_diplomacy_action_cards_signature.py  apply_diplomacy_relation_param_types.py  apply_event_code_enum_params.py  apply_function_renames_csv.py  apply_global_data_from_csv.py  apply_hidden_ecx_fastcall_wave.py  apply_hidden_param_signature_wave.py  apply_inheritance_edge_comments.py  apply_manual_struct_fields.py  apply_map_interaction_mode4_globals.py  apply_named_vtable_family_labels.py  apply_nonalloc_constructor_signatures.py  apply_signatures_from_csv.py  apply_simple_thunk_signatures.py  apply_thiscall_bridge_signatures_csv.py  apply_thiscall_stack_params_from_hidden_csv.py  apply_thunk_target_signatures_from_csv.py  apply_turn_instruction_struct_signatures.py  apply_type_name_labels_from_aggressive_json.py  (+169 more)
scripts/: AttachFidDatabaseNoPrompt.java  CountRenamedFunctions.java  CreateSingleFidLibraryNoPrompt.java  ExportFidAnalyzerBookmarksNoPrompt.java  ImportMSLibsNoPrompt.java  ImportMSLibsNoPromptUnique.java  RenameTMacViewMgrWrapperImplTargets.java  analyze_constructor_call_tags.py  analyze_dispatch_vtable_state_writers.py  analyze_dispatch_vtable_state_writers_resolved.py  analyze_vtable_methods_call_4c_constants.py  auto_rename_thunk_fun_wrappers.py  build_cursor_pngs.py  check_init_table_692660_names.py  count_renamed_functions.py  create_residual_stub_functions.py  create_vtable_66f120_tail_thunks.py  dump_0x03b6_hit_contexts.py  dump_around_485420.py  dump_data_64d100.py  dump_init_func_table_69266c.py  dump_instruction_windows.py  dump_instruction_windows_wide.py  dump_vtable_649d3c.py  dump_vtable_entries_66f120.py  dump_vtable_method_windows.py  dump_vtable_region_652aa4.py  dump_vtable_region_652b10.py  dump_vtable_region_66f980.py  dump_vtable_regions_armory_related.py  dump_vtable_regions_armory_related_full.py  dump_window_409903.py  dump_window_49baa7.py  dump_window_49c120.py  dump_window_4a9a.py  dump_window_56af_56b0.py  dump_window_57a59f_big.py  dump_windows_missing_no_functions.py  find_3b6_in_memory_blocks_with_context.py  find_branch_to_357b0_code3b6_path.py  (+154 more)
src/: main.cpp
tests/: test_tooling_smoke.py
tmp_decomp/: 00403e2c_thunk_FUN_005033e0.c  00430350_FUN_00430350.c  0044fbc0_Cluster_UiControlA4A8_1C8_1E4_0044fbc0.c  00453800_FUN_00453800.c  00453830_FUN_00453830.c  00453860_thunk_DestructCityDialogSharedBaseState.c  004538a0_Cluster_UiControlA4A8_1C8_004538a0.c  004caa50_FUN_004caa50.c  004dbd20_FUN_004dbd20.c  004dbf00_FUN_004dbf00.c  004dd140_FUN_004dd140.c  004dd1b0_FUN_004dd1b0.c  004dd270_FUN_004dd270.c  004dd430_FUN_004dd430.c  (+92 more)
(+1028 files in other folders)
