[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imperialism-knowledge"
version = "0.1.0"
description = "Reverse engineering workspace for Imperialism."
readme = "instructions.md"
requires-python = ">=3.12"
dependencies = [
  "ghidra-stubs==12.0.2",
  "jpype1==1.5.2",
  "packaging==26.0",
  "pyghidra==3.0.2",
]
